--- a/box/Vagrantfile
+++ b/box/Vagrantfile
@@ -8,7 +8,8 @@
 Vagrant.configure(2) do |config|
 
   config.vm.box = "ubuntu/trusty64"
-  config.vm.network :forwarded_port, host: 5000, guest: 80
+  config.vm.network :forwarded_port, host: 7000, guest: 7000
+  config.vm.network :forwarded_port, host: 7001, guest: 7001
 
   config.vm.synced_folder "../src/", "/var/src"
   config.vm.synced_folder "../scripts/", "/home/vagrant/scripts"
@@ -17,6 +18,10 @@ Vagrant.configure(2) do |config|
     apt-get update
     apt-get install -y puppet
   SHELL
+
+  config.vm.provider "virtualbox" do |v|
+    v.customize ["setextradata", :id, "VBoxInternal2/SharedFoldersEnableSymlinksCreate/v-root", "1"]
+  end
 
   config.vm.provision :puppet do |puppet| 
     puppet.options = "--verbose --debug" 
