--- a/src/package.json
+++ b/src/package.json
@@ -7,11 +7,14 @@
   "dev-dependencies": {},
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-bump": "^0.1.0",
     "grunt-concat-sourcemap": "^0.4.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
-    "less-plugin-autoprefix": "^1.0.1"
+    "grunt-targethtml": "^0.2.6",
+    "less-plugin-autoprefix": "^1.3.0"
   }
 }
